# AI-Powered-Job-Assessment-Screening-Platform

./: README.md  STRUCTURE.md
agents/interview-agent/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.pip  README.md  pyproject.toml  requirements.txt
agents/interview-agent/.devcontainer/: devcontainer.json  docker-compose.yml
agents/interview-agent/src/: agent.py  candidate_presence_manager.py  interview_agent.py  metadata_parser.py  request_handler.py  s3_transcript_storage.py  session_manager.py  stage_manager.py  stage_manager_factory.py  transcript_manager.py
agents/interview-agent/src/helpers/: __init__.py  env_validator.py  participant_logger.py
agents/interview-agent/src/metrics/: __init__.py  metrics_collector.py  metrics_formatter.py  new_relic_client.py
agents/interview-agent/src/services/: __init__.py  base_api_service.py  interview_api_service.py  m2m_token_service.py
agents/vh-faq-agent/api/: .gitignore  README.md  build.mjs  index.mjs  package.json  upload-function.ps1
agents/vh-faq-agent/js-plugin/: .gitignore  DEBUGGING.md  README.md  call-notification.js  index.html  package.json  sound-test.html  test-aggressive-mode.html  test-scenarios.html  tsconfig.json  vite.config.ts
backend/: Dockerfile
examples/: __init__.py  run_example.py
frontend/src/: App.tsx  index.css
models/: __init__.py  ai_resume_matcher.py  backend_integration_example.py  pdf_to_text.py
models/tests/: __init__.py  test_candidate_application.py  test_matching.py  test_pdf_integration.py  test_pdf_interactive.py  test_threshold.py
(+57 files in other folders)
